aws/NetworkAcls-us-west-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-4b36db2f", 
     "NetworkAclId": "acl-43940226", 
     "SubnetId": "subnet-5cf44105"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-5436db30", 
     "NetworkAclId": "acl-43940226", 
     "SubnetId": "subnet-2b12664e"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "162.243.144.192/32", 
     "Egress": false, 
     "PortRange": {
      "From": 3306, 
      "To": 3306
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "104.236.156.171/32", 
     "Egress": false, 
     "PortRange": {
      "From": 3306, 
      "To": 3306
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 200
    }, 
    {
     "CidrBlock": "107.170.243.58/32", 
     "Egress": false, 
     "PortRange": {
      "From": 3306, 
      "To": 3306
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 300
    }, 
    {
     "CidrBlock": "104.236.167.119/32", 
     "Egress": false, 
     "PortRange": {
      "From": 3306, 
      "To": 3306
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 400
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-43940226", 
   "Tags": [], 
   "VpcId": "vpc-72850617"
  }, 
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-fb71a382", 
     "NetworkAclId": "acl-8b8194ef", 
     "SubnetId": "subnet-1013e177"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-8b8194ef", 
   "Tags": [], 
   "VpcId": "vpc-1dc49479"
  }
 ]
}
